Fix ul spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,10 @@ ol {
 	display: table;
 }
 
+ul {
+	display: table;
+}
+
 hr {
 width: 100%;
 margin-top: 1em;
